--- a/templates/index.html
+++ b/templates/index.html
@@ -105,6 +105,7 @@
                     background-color: #ffd700;
                 }
     </style>
+    <meta name="google-site-verification" content="NIWfiNOWfhWEyLblcP0mk-nT1-ojIbaew24UqJO2TbQ" />
 </head>
 <body>
     <h1>Secure Key Generator</h1>
